public/css/style.css
.form-group {
   padding-left: 20px;

}

.clickyThings {
    padding-top: 20px;
    padding-left: 20px;
    margin-left: 20px;
}

.grid{
    margin-bottom: 15px;
}

.stuffandthings {
   margin-top: 15px;
}

/*.setList {
    padding-right: 10px;
}*/

